feat: agregacion de enpoints seguridad, y ademas el su documentacion.
